Animate with svg dashoffset

--- a/TextInAnimation/index.html
+++ b/TextInAnimation/index.html
@@ -8,10 +8,11 @@
     <title>Animation Fun</title>
 </head>
 <body>
-    <canvas id="title" class="title">
-
-    </canvas>
-
+    <svg height="95%" width="95%">
+        <text x="0" y="10vw" font-family="Verdana" font-size="10vw" fill="none" stroke="black" id="title">
+            HEYO
+        </text>
+    </svg>
     <script src="script.js"></script>
 </body>
 </html>
