fully functional animation - goes along full path

--- a/TextInAnimation/index.html
+++ b/TextInAnimation/index.html
@@ -8,9 +8,9 @@
     <title>Animation Fun</title>
 </head>
 <body>
-    <svg height="95%" width="95%">
+    <svg height="95%" width="95%" id="titleWrapper">
         <text x="0" y="10vw" font-family="Verdana" font-size="10vw" fill="none" stroke="black" id="title">
-            HEYO
+            Patty Jay
         </text>
     </svg>
     <script src="script.js"></script>
