--- a/TextInAnimation/index.html
+++ b/TextInAnimation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <svg height="95%" width="95%" id="titleWrapper">
-        <text x="0" y="10vw" font-family="Verdana" font-size="10vw" fill="none" stroke="black" id="title">
+        <text x="0" y="10vw" font-size="10vw" fill="none" stroke="black" id="title">
             Patty Jay
         </text>
     </svg>
