--- a/loadingSpinners/index.html
+++ b/loadingSpinners/index.html
@@ -17,5 +17,19 @@
             <div class="spinner01--05 spinner01--item"></div>
         </div>
     </div>
+    <div class="itemContainer">
+        <div class="spinner02">
+            <div class="spinner02--01 spinner02--item"></div>
+            <div class="spinner02--02 spinner02--item"></div>
+            <div class="spinner02--03 spinner02--item"></div>
+            <div class="spinner02--04 spinner02--item"></div>
+            <div class="spinner02--05 spinner02--item"></div>
+            <div class="spinner02--06 spinner02--item"></div>
+            <div class="spinner02--07 spinner02--item"></div>
+            <div class="spinner02--08 spinner02--item"></div>
+            <div class="spinner02--09 spinner02--item"></div>
+            <div class="spinner02--10 spinner02--item"></div>
+        </div>
+    </div>
 </body>
 </html>
