format for codepen

--- a/loadingSpinners/index.html
+++ b/loadingSpinners/index.html
@@ -31,5 +31,10 @@
             <div class="spinner02--10 spinner02--item"></div>
         </div>
     </div>
+    <div class="itemContainer">
+        <div class="spinner02">
+            <div class="spinner03--01"></div>
+        </div>
+    </div>
 </body>
 </html>
